issue with overflow text

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <section class="profile page__section">
           <img src="./images/avatar.jpg" alt="current user avatar" class="profile__avatar" />
           <div class="profile__column">
-            <h1 class="profile__name">Bessie Coleman</h2>
-            <p class="profile__title">Civil Aviator</p>
+            <h1 class="profile__name">Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon</h2>
+            <p class="profile__title">Known mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American singer, record producer, and entrepreneur. An influential figure in modern world</p>
             <button type="button" class="profile__edit-button">
               <img src="./images/icons/pencil.svg" alt="pencil icon">Edit Profile
             </button>
@@ -84,7 +84,7 @@
                 alt="A very long bridge, over the forest photo" 
                 class="card__image">
                 <div class="card__content">
-                  <h2 class="card__title">A very long bridge, over the forest...
+                  <h2 class="card__title">A very long bridge, over the forest fill fill fill
                   </h2>
                   <button type="button" class="card__like-button">
                     
