--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <section class="profile page__section">
           <img src="./images/avatar.jpg" alt="current user avatar" class="profile__avatar" />
           <div class="profile__column">
-            <h1 class="profile__name">Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon</h2>
-            <p class="profile__title">Known mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American singer, record producer, and entrepreneur. An influential figure in modern world</p>
+            <h1 class="profile__name">Bessie Coleman</h2>
+            <p class="profile__title">Civil Aviator</p>
             <button type="button" class="profile__edit-button">
               <img src="./images/icons/pencil.svg" alt="pencil icon">Edit Profile
             </button>
