Project 4 stage 1, submission 1

--- a/index.html
+++ b/index.html
@@ -125,5 +125,6 @@
         <p class="footer__content">2023 &copy; Spots</p>
       </footer>
     </div>
+    <script src="./scripts/index.js" defer="true"></script>
   </body>
 </html>
