--- a/index.html
+++ b/index.html
@@ -124,6 +124,38 @@
       <footer class="footer">
         <p class="footer__content">2023 &copy; Spots</p>
       </footer>
+      <div class="modal">
+        <div class="modal__container">
+          <button type="submit" class="modal__close-button"></button>
+          <h2 class="modal__title">Edit profile</h2>
+
+          <form name="edit-profile" class="modal__form">
+            <label for="name" class="modal__label"
+              >Name
+              <input
+                type="text"
+                class="modal__input"
+                id="name"
+                name="name"
+                placeholder="Bessie Coleman"
+              />
+            </label>
+
+            <label for="description" class="modal__label"
+              >Description
+              <input
+                type="text"
+                class="modal__input"
+                id="description"
+                name="description"
+                placeholder="Civil Aviator"
+              />
+            </label>
+
+            <button type="submit" class="modal__submit-button">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
     <script src="./scripts/index.js" defer="true"></script>
   </body>
