project 4 stage 3 submission 1

--- a/index.html
+++ b/index.html
@@ -124,9 +124,13 @@
       <footer class="footer">
         <p class="footer__content">2023 &copy; Spots</p>
       </footer>
-      <div class="modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
-          <button type="submit" class="modal__close-button"></button>
+          <button
+            type="submit"
+            class="modal__close-button"
+            id="edit-profile-modal-close"
+          ></button>
           <h2 class="modal__title">Edit profile</h2>
 
           <form name="edit-profile" class="modal__form">
