Project 4 stage 4 submission 1

--- a/index.html
+++ b/index.html
@@ -48,75 +48,16 @@
         </section>
 
         <section class="card-gallery page__section">
-          <ul class="card-gallery__list">
-            <li class="card">
-              <img
-                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
-                alt="Val Thorens photo"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">Val Thorens</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/2-photo-by-ceiline-from-pexels.jpg"
-                alt="Restaurant terrace photo"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">Restaurant terrace</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
-                alt="An outdoor cafe photo"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">An outdoor cafe</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
-                alt="A very long bridge, over the forest photo"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">
-                  A very long bridge, over the forest fill fill fill
-                </h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
-                alt="Tunnel with morning light photo"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">Tunnel with morning light</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
-                alt="Mountain house photo"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">Mountain house</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
+          <ul class="card-gallery__list" id="cards_list">
+            <template id="card-template">
+              <li class="card">
+                <img src="" alt="" class="card__image" />
+                <div class="card__content">
+                  <h2 class="card__title"></h2>
+                  <button type="button" class="card__like-button"></button>
+                </div>
+              </li>
+            </template>
           </ul>
         </section>
       </main>
@@ -134,23 +75,23 @@
           <h2 class="modal__title">Edit profile</h2>
 
           <form name="edit-profile" class="modal__form">
-            <label for="name" class="modal__label"
+            <label for="profile-name-input" class="modal__label"
               >Name
               <input
                 type="text"
                 class="modal__input"
-                id="name"
+                id="profile-name-input"
                 name="name"
                 placeholder="Bessie Coleman"
               />
             </label>
 
-            <label for="description" class="modal__label"
+            <label for="profile-description-input" class="modal__label"
               >Description
               <input
                 type="text"
                 class="modal__input"
-                id="description"
+                id="profile-description-input"
                 name="description"
                 placeholder="Civil Aviator"
               />
@@ -161,6 +102,6 @@
         </div>
       </div>
     </div>
-    <script src="./scripts/index.js" defer="true"></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
