Project 4 Stage 4 Submission 2

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button
-            type="submit"
+            type="button"
             class="modal__close-button"
             id="edit-profile-modal-close"
           ></button>
