--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             <template id="card-template">
               <li class="card">
                 <img src="" alt="" class="card__image" />
+                <button type="button" class="card__delete-button"></button>
+
                 <div class="card__content">
                   <h2 class="card__title"></h2>
                   <button type="button" class="card__like-button"></button>
@@ -65,6 +67,7 @@
       <footer class="footer">
         <p class="footer__content">2023 &copy; Spots</p>
       </footer>
+
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button
@@ -100,6 +103,56 @@
             <button type="submit" class="modal__submit-button">Save</button>
           </form>
         </div>
+      </div>
+
+      <div class="modal" id="add-card-modal">
+        <div class="modal__container">
+          <button
+            type="button"
+            class="modal__close-button"
+            id="modal-close"
+            label="Close modal"
+          ></button>
+          <h2 class="modal__title">New Post</h2>
+
+          <form class="modal__form" id="add-card-form">
+            <label for="add-card-link-input" class="modal__label"
+              >Image link
+              <input
+                type="url"
+                class="modal__input"
+                id="add-card-link-input"
+                name="link"
+                placeholder="Paste a link to the picture"
+              />
+            </label>
+
+            <label for="add-card-name-input" class="modal__label"
+              >Caption
+              <input
+                type="text"
+                class="modal__input"
+                id="add-card-name-input"
+                name="name"
+                placeholder="Type your caption"
+              />
+            </label>
+
+            <button type="submit" class="modal__submit-button">Save</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal" id="preview-modal">
+      <div class="modal__container modal__container_type_preview">
+        <button
+          label="Close modal"
+          class="modal__close-button modal__close-button_type_preview"
+          type="button"
+        ></button>
+        <img class="modal__image" src="" alt="" />
+        <p class="modal__caption"></p>
       </div>
     </div>
     <script src="./scripts/index.js" defer></script>
