--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           ></button>
           <h2 class="modal__title">Edit profile</h2>
 
-          <form name="edit-profile" class="modal__form">
+          <form name="edit-profile" class="modal__form" id="profile-form">
             <label for="profile-name-input" class="modal__label"
               >Name
               <input
@@ -111,7 +111,6 @@
             type="button"
             class="modal__close-button"
             id="modal-close"
-            label="Close modal"
           ></button>
           <h2 class="modal__title">New Post</h2>
 
@@ -147,7 +146,6 @@
     <div class="modal" id="preview-modal">
       <div class="modal__container modal__container_type_preview">
         <button
-          label="Close modal"
           class="modal__close-button modal__close-button_type_preview"
           type="button"
         ></button>
