--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,10 @@
 
       <main class="content">
         <section class="profile page__section">
-          <img
-            src="<%= require('./images/avatar.jpg')%>"
-            alt="current user avatar"
-            class="profile__avatar"
-          />
+          <img src="" alt="current user avatar" class="profile__avatar" />
           <div class="profile__column">
-            <h1 class="profile__name">Bessie Coleman</h1>
-            <p class="profile__title">Civil Aviator</p>
+            <h1 class="profile__name"></h1>
+            <p class="profile__title"></p>
             <button type="button" class="profile__edit-button">
               <img
                 src="<%= require('./images/icons/pencil.svg')%>"
