--- a/src/index.html
+++ b/src/index.html
@@ -212,10 +212,14 @@
             class="modal__close-button modal__close-button_type_avatar"
             id="modal-close"
           ></button>
-          <h2 class="modal__title">Edit profile avatar</h2>
+          <h2 class="modal__title modal__title_avatar-mobile">
+            Edit profile avatar
+          </h2>
 
           <form class="modal__form" id="avatar-form" novalidate>
-            <label for="avatar-link-input" class="modal__label"
+            <label
+              for="avatar-link-input"
+              class="modal__label modal__label_avatar-mobile"
               >Profile Picture
               <input
                 type="url"
